﻿- Feature: Support non-HTML responses
- Feature: Map HTTP response codes to Gemini (redirects, 404s, etc)